--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "peerjs": "^1.5.2",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-web": "~0.19.6",
+    "react-native-webrtc": "^118.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
